# DemoProjectPITB

./: README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/newprojectforhamza/: ExampleInstrumentedTest.kt
app/src/dev/res/values/: dev.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/newprojectforhamza/: BaseApplication.kt
app/src/main/res/anim/: popup_animation_logo.xml
app/src/main/res/drawable/: drawable_circle.xml  drawable_splash_backgroud.xml  ic_clouds.xml  ic_logo.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  authentication_activity.xml  fragment_all_movie.xml  fragment_home.xml  fragment_login.xml  fragment_popular_movie.xml  fragment_register.xml  fragment_top_rated_movie.xml  item_list.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/navigation/: auth_nav.xml  main_nav.xml
app/src/main/res/raw/: auth_mock.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/main/res/xml/: activity_main_scene.xml
app/src/production/res/drawable/: ic_logo_overlay.xml
app/src/production/res/mipmap-anydpi-v26/: arfa_icon_round.xml
app/src/production/res/values/: production.xml
app/src/staging/res/drawable/: drawable_circle_progress_bar.xml  drawable_progress_bar_shape.xml
app/src/test/java/com/example/newprojectforhamza/: AuthRepositoryImpTest.kt  FakeEncrypter.kt  MovieRepositoryTest.kt  RoomTestRule.kt  (+5 more)
(+68 files in other folders)
